mlruns/0/660c91c599724dc7b5eae5b41892f86c/params/pipeline.error

---------------------------------------------------------------------------
Exception encountered at "In [11]":
  Cell In[11], line 7
    md = "**18_backtest_simulation concluído ✅**
         ^
SyntaxError: unterminated string literal (detected at line 7)

